src/sass/_user.scss
.openSans8{
  font-family: 'Open Sans', sans-serif;
  font-size: 9pt;
}

.header-card-info
{

  .title
  {
    font-family: 'Open Sans', sans-serif;
    font-size: 10pt;
    color: $silver;
  }

  .subtitle
  {
    font-family: 'Droid Sans', sans-serif;
    font-size: 14pt;
    color: $dark-silver;
  }


}

.lst-entry-users {
  width: 100%;
  height: 6em;
  font-family: 'Open Sans', sans-serif;
  padding: 1em 0 !important;
  color: $dark-silver;
  border-bottom: 1px solid #f1f1f1; // TODO move this to color scheme
  // background-color: $element-background-color;
  position: relative;
  transition: 0.3s;

  .badge{
      font-size: 0.7rem;
      color: $white;
      font-weight: 900;
      border-radius: 20px;
      overflow: hidden;
      display: inline-block;
      padding: 5px 11px;
      background-color: $shark;
  }

  .div-img{
    width: 80px;

  }

  .div-with-img{

    width: calc(100% - (80px));
  }

  .hovered {
    position: absolute;
    width: 0%;
    opacity: 0;
    transition: width 1s ease;
    overflow: hidden;

    & div{
      overflow: hidden;
      white-space: nowrap;
    }
  }


  &:hover .hovered {
    position: absolute;
    left: 0px;
    padding: 10px;
    top: 0px;
    height: 100%;
    opacity: 1;
    background-color: $black;
    width: 95%;
    color:#FFF;
  }

  &.active {
    background-color: #fff;
    // width: 101%;
    z-index: 5;
    border-left: 3px solid darkcyan;

    .title {
      color: #0b5394; // TODO move this to color scheme
    }
  }

  .lst-entry-users-title {
    margin-top: 0.5em;
  }

  .title, .title2 {
    font-family: 'Droid Sans', sans-serif;
    font-weight: bold;
  }

  .subtitle {
    font-family: 'Cuprum', sans-serif;
    color: inherit;
  }

  img {
    height: 4em;
  }
}

.lst-entry-users-wrapper:hover {
  background-color: $matte !important;
  color: #fff;
}

.lst-entry-users-wrapper.active {
  background-color: #b8b8b8 !important;
  border-left: 3px solid $bluewood;
  color: #fff;
}

.lst-user-detail{
  padding: 50px;
  // padding-left: 50px;
  // padding-top: 30px;
  // padding-right: 50px;
  font-family: 'Open Sans', sans-serif;

  .photo_big
  {
    width: 80px;
    height: 80px;
  }
}

.lst-user-title span {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  display: inline-block;
  max-width: 100%;
  color: #0b5394;
  font-size: 185%;
}

.lst-user-title .subTitle {

   margin-top: 5px;
}

.lst-user-line {
  font-size: 110%;
  // padding-left: 50px !important;

  .field
  {
    font-family: 'Open Sans', sans-serif;
    color: $dark-silver;
  }

  .value
  {
    font-family: 'Cuprum', sans-serif;
    color: $black;
    font-size: 125%;
    padding-left: 20px;
    margin-bottom: 15px;
    display: inline-block;
  }

}

.lst-user-detail .leftButton{
  // padding-left: 50px !important;
}

.lst-user-detail .rightButton{
  // padding-right: 50px !important;
}

.subTitle {
  color: #b8b8b8;
  font-size: 125%;
  margin-bottom: 0px;
}

.initialUserMessage {
  margin-top: 25%;
  text-align: center;
  font-size: 235%;
  font-family: 'Cuprum', sans-serif;
  color: $dark-silver;

  p {
    margin: 0;
    line-height: 1.5em;
  }
}

.userCanvas  {
  $margin: 6.5%;
  width: 100% - (2* $margin) !important;

  // 82 px is the height of the inner header TODO set a fixed height for the inner header
  // min-height: calc(100% - (#{$page-header-size} + 82px + 1em));
  // min-height: 685px;
  min-height: 475px;
  margin: 5px $margin 10px $margin !important;
  padding-bottom: 5em !important;
  padding-top: $page-header-size + 5px;
  position: relative;
  z-index: 0;
  animation-name: opacity-50-to-100;
  animation-duration: 3s;
  animation-iteration-count: 1;

  background-color: #f8f8f8 !important; // TODO add this to color scheme

  &.create {
    background-color: #d9d9d9; // TODO add this to color scheme
  }

  &.selected {
    background-color: #99a2aa; // TODO add this to color scheme
  }
}

#detail-area {
  background-color: #e7e7e7;

  // hack to make the detail area expand to the full height of min-height container
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  padding-top: $page-header-size + 5px;
  border-left: 1px solid #d4d4d4;
  overflow: auto;
  padding-bottom: 30px;

  &.selected {
    background-color: $white;
  }

  &.create {
    background-color: #fff;
  }
}

.userCanvasFooter {
  color: #b8b8b8;
  // margin-top: 30px;
  // margin-bottom: 30px;
  font-family: 'Cuprum', sans-serif;
  position: absolute;
  bottom: 1em;
  padding-right: 3%;


  a.inactive {
    color: inherit;
  }

  a {
    color: $black;
  }

}

//@TODO change to pr10px and move to _apps.scss
.paddingRight10 {
  padding-right: 10px;
}

.paddingLeft10 {
  padding-left: 10px;
}

.userSubHeader {
  background-color: #fff;;
  padding-top:10px;
  font-size: 16pt;
  font-family: 'Droid Sans', sans-serif;
  color: #666;
  margin: 0;
  z-index: 1000;

  position: absolute;
  width: 100%;
  height: $page-header-size;
  animation-name: height-opacity-0-to-100;
  animation-duration: 1.5s;
  animation-iteration-count: 1;

  .main-title
  {
        font-family: 'Raleway', sans-serif;
        padding-left:4em;
  }

  .button a {
    // font-size: 0.7rem;
    // margin-top: 10px !important;
    // color: inherit;
    // height: 29px;
    // font-weight: 900;
    // line-height: 2em;
    // width: 9em;
    // text-align: center;
    // color: #fff;
    // border-radius: 10px;
    // overflow: hidden;
    // padding: 5px 0px;
    // background-color: $offline;
  }
}

.marginBottom0px {
  margin-bottom: 0px !important;
}

#userMain {
  display: block;
  position: relative;
  width: 100%;
  height: 100%;
}

@keyframes height-opacity-0-to-100 {
    0% {
      height: 0px;
      opacity: 0;
    }
    25% {
      height: 15px;
      opacity: 0;
    }
    50% {
      height: 30px;
      opacity: 0;
    }
    100% {
      height: 65px;
      opacity: 1;
    }
}

@keyframes opacity-50-to-100 {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

